# git-sync

./: .gitignore  .prettierignore  .prettierrc.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  justfile  package.json  pnpm-lock.yaml  release-please-config.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
crates/git-sync-desktop/: .prettierignore  Cargo.toml  components.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
crates/git-sync-desktop/src/: App.tsx  api.ts  assets.rs  config.rs  index.css  main.rs  main.tsx  state.rs  status.rs  tray.rs  types.ts  worker.rs
crates/git-sync-desktop/src-tauri/: CHANGELOG.md  Cargo.toml  tauri.conf.json
crates/git-sync-desktop/src-tauri/capabilities/: default.json
crates/git-sync-desktop/src-tauri/icons/: icon.icns
crates/git-sync-desktop/src-tauri/src/: commands.rs  config.rs  lib.rs  log_layer.rs  main.rs  status.rs  worker.rs
crates/git-sync-desktop/src/components/: GlobalSettingsView.tsx  RepoDetailSidebar.tsx  RepoListView.tsx  RepoSettingsView.tsx  RepoStatusBadge.tsx  StatusDot.tsx  ThemeProvider.tsx  TitleBar.tsx  UpdateBadge.tsx
crates/git-sync-desktop/src/components/ui/: button.tsx  checkbox.tsx  sonner.tsx
crates/git-sync-desktop/src/hooks/: useIsFullscreen.ts  useUpdater.ts
crates/git-sync-desktop/src/ui/: app_window.rs  file_browser_field.rs  icons.rs  mod.rs  nav_state.rs  repo_list_view.rs  repo_settings_view.rs  settings_tab.rs  status_tab.rs
crates/git-sync-desktop/ui/: app-window.slint  config-types.slint  header.slint  settings-tab.slint  status-tab.slint
crates/git-sync-lib/: Cargo.toml  LICENSE-APACHE  README.md
crates/git-sync-lib/src/: config.rs  error.rs  lib.rs  sync.rs  watch.rs
crates/git-sync-lib/src/sync/: transport.rs
crates/git-sync-lib/tests/: merge.rs
crates/git-sync-tauri/: package.json  pnpm-lock.yaml  vite.config.ts
crates/git-sync-tauri/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
crates/git-sync-tauri/src-tauri/: tauri.conf.json
crates/git-sync-tauri/src-tauri/capabilities/: default.json
crates/git-sync-tauri/src-tauri/src/: commands.rs  lib.rs  log_layer.rs  status.rs  worker.rs
crates/git-sync-tauri/src/components/: AboutModal.tsx  RepoDetailSidebar.tsx  RepoListView.tsx  RepoSettingsView.tsx  RepoStatusBadge.tsx  StatusDot.tsx  ThemeProvider.tsx  TitleBar.tsx
crates/git-sync-tauri/src/components/ui/: button.tsx  sonner.tsx
crates/git-sync-tauri/src/hooks/: useIsFullscreen.ts
src/: DiffViewerApp.tsx  api.ts  bindings.ts  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  diff_view.rs  lib.rs  log_layer.rs  worker.rs
src/components/: AboutModal.tsx  ConflictPanel.tsx  MergeEditor.tsx  MergeEditorModal.tsx  RepoDetailSidebar.tsx  StatusDot.tsx  TitleBar.tsx  UpdateBadge.tsx
src/components/merge/: ContentConflictView.tsx  DeleteConflictView.tsx  MergeConflictView.tsx  MergeEditorFileTree.tsx  MergeEditorModal.tsx  MisMergeEditor.tsx  RenameConflictView.tsx
src/components/ui/: badge.tsx  dialog.tsx  field.tsx  input.tsx  resizable.tsx  tree-view.tsx
src/hooks/: queries.ts  useUpdater.ts
src/styles/: mismerge.css
ui/: app-window.slint
