[package]
name = "git-sync-tauri"
version = "0.2.2"
description = "Git Sync desktop app (Tauri)"
license = "MIT"
edition = "2021"

[lib]
name = "git_sync_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
vendored-openssl = ["git-sync-lib/vendored-openssl"]

[dependencies]
git-sync-lib    = { path = "../crates/git-sync-lib" }

tauri                 = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog       = "2"
tauri-plugin-notification = "2"
tauri-plugin-os           = "2"
tauri-plugin-process      = "2"
tauri-plugin-updater      = "2"

specta              = { version = "=2.0.0-rc.24", features = ["derive", "chrono"] }
specta-typescript   = "0.0.11"
tauri-specta        = { version = "=2.0.0-rc.24", features = ["derive", "typescript"] }

serde               = { version = "1", features = ["derive"] }
serde_json          = "1"
toml                = "0.8"
tokio               = { version = "1", features = ["rt", "time", "sync", "macros"] }
directories         = "6.0.0"
chrono              = { version = "0.4", features = ["serde"] }
anyhow              = "1"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "registry"] }
