[package]
name = "git-sync-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
git-sync-lib = { path = "../git-sync-lib" }
git-sync-rs = "0.7.0"
slint = { version = "1", features = ["serde"] }
tray-icon = "0.19"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rfd = "0.15"
tokio = { version = "1", features = ["rt", "time", "sync"] }
directories = "6.0.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[build-dependencies]
slint-build = "1"
