[package]
name = "git-sync-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "git-sync"
path = "src/main.rs"

[dependencies]
git-sync-lib  = { path = "../git-sync-lib" }
gpui          = "0.2.2"
gpui-component = "0.5.1"
gpui-component-assets = "0.5.1"
tray-icon     = "0.19"
serde         = { version = "1", features = ["derive"] }
toml          = "0.8"
rfd           = "0.15"
tokio         = { version = "1", features = ["rt", "time", "sync", "macros"] }
directories   = "6.0.0"
anyhow        = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rust-embed = "8.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
