[package]
name = "git-sync-lib"
version = "0.7.7"
edition = "2021"
description = "Vendored fork of git-sync-rs: runtime-agnostic automatic git repository synchronization"
license = "MIT OR Apache-2.0"

[dependencies]
git2 = "0.18"
thiserror = "1.0"
chrono = "0.4"
hostname = "0.3"
tracing = "0.1"
notify = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
shellexpand = "3.0"
async-channel = "2"
futures-timer = "3"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.0"
